[tool.poetry]
name = "try"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.4.0"
dataclass = "^0.0"
marshmallow_dataclass = "^7.5.0"
fake_useragent = "^0.1.11"
marshmallow = "^3.5.1"
requests = "^2.23.0"
pudb = "^2019.2"
ipython = "^7.13.0"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
